CMS-10222 Fix cropper size and location when image is fit into view
(cherry picked from commit c467487256380e605324be0b453f98d6ac9c5539)

--- a/cms/gallery/frontend/src/main/java/org/hippoecm/frontend/plugins/gallery/editor/crop/crop-editor-dialog.css
+++ b/cms/gallery/frontend/src/main/java/org/hippoecm/frontend/plugins/gallery/editor/crop/crop-editor-dialog.css
@@ -18,7 +18,7 @@
   float: left;
   width: 580px;
   overflow: auto;
-  margin: 10px 0 0 10px;
+  margin: 10px;
 }
 
 .left-crop-area .yui-skin-sam {
